[project]
name = "42cursus-a-maze-ing"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mazegen"]
